hphp/test/zend/good/ext-standard-general_functions/getservbyname_basic.php
<?php

	$services = array('http', 'ftp', 'ssh', 'telnet', 'imap', 'smtp', 'nicname', 'gopher', 'finger', 'pop3', 'www');

	foreach ($services as $service) {
    		$port = getservbyname($service, 'tcp');
    		var_dump($port);
	}


?>